media 980, 768 done.  viewport not added

--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
         <h1 class="name">
             <a class="home" href="index.html">Matt Purpura</a>
         </h1>
-            <a class="tab" href="contact.html">Contact</a>    
+        <div class="navtabs">
+            <a class="tab" id="tabContact" href="contact.html">Contact</a>    
             <a class="tab" id="tabPortfolio" href="portfolio.html">Portfolio</a>        
             <a class="tab" href="index.html">About</a> 
+        </div>
     </header>
 
     <div class="wrapper">
